# github_action

./: .gitignore  Dockerfile  DockerfileSample.txt  README.md  api.py  app.py  config.json  demo.py  eval.py  git_cicd.sh  git_cicd2.sh  predict.py  pyproject.toml  requirements.txt  test.txt  utils.py
.github/workflows/: git_action_ssh.yml  python-app.yml  slack_to_jin.yml
modules/data/: dataset.py
modules/models/core/: rnetmish.py
modules/modules/data/utils/: merge_fileName_format.ipynb  select_possible_OEpos_icdar15.ipynb  select_possible_OEpos_icdar17.ipynb
modules/modules/trainer/: trainer.py
modules/modules/utils/: util.py
modules/utils/: converter.py
server/: KEYS.py  README.md  api.py  pyproject.toml
server/api/: __init__.py  fots.py
server/modules/: color_finder.py  docs.py  generate_point.py  inference.py  papago.py
server/modules/data/utils/: select_possible_latin.ipynb
server/modules/models/: model.py
server/modules/models/core/: crnn.py  rnet.py
server/scripts/: docker_bash.sh  start.sh
server/server/api/: demo.py  fots.py
server/server/modules/: docs.py  util.py
